# sea

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: glad.c
src/core/: window.cpp
src/include/core/: window.hpp
src/include/glad/: glad.h
src/testing/: hello_world.cpp  window_class.cpp
